[Material][Mac] Fix Default Favicon's Color

Default favicon now has the same color as the close button. This CL
also makes sure that the favicon's color gets updated when the theme
changes. CloseButtonColor has been refactored.

BUG=621015, 625821

Review-Url: https://codereview.chromium.org/2126043002
Cr-Commit-Position: refs/heads/master@{#405612}

Former-commit-id: 7d57b7e232022e031e8a0908215f9ad4eee61117